trivial: use the en_US spelling of analyze internally and in the UI

--- a/data/gcm-calibrate.ui
+++ b/data/gcm-calibrate.ui
@@ -649,7 +649,7 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkButton" id="button_print_analyse">
+                                  <object class="GtkButton" id="button_print_analyze">
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">True</property>
@@ -671,7 +671,7 @@
                                         <child>
                                           <object class="GtkLabel" id="label19">
                                             <property name="visible">True</property>
-                                            <property name="label" translatable="yes">Analyse Print Shop Images</property>
+                                            <property name="label" translatable="yes">Analyze Print Shop Images</property>
                                           </object>
                                           <packing>
                                             <property name="position">1</property>
