Update profiling precision wording

--- a/data/gcm-calibrate.ui
+++ b/data/gcm-calibrate.ui
@@ -746,7 +746,7 @@
                                         <child>
                                           <object class="GtkLabel" id="label22">
                                             <property name="visible">True</property>
-                                            <property name="label" translatable="yes" comments="The length of the translation">Short</property>
+                                            <property name="label" translatable="yes" comments="The precision of the calibration">Low</property>
                                           </object>
                                           <packing>
                                             <property name="position">1</property>
@@ -820,7 +820,7 @@
                                         <child>
                                           <object class="GtkLabel" id="label24">
                                             <property name="visible">True</property>
-                                            <property name="label" translatable="yes" comments="The length of the translation">Long</property>
+                                            <property name="label" translatable="yes" comments="The precision of the calibration">High</property>
                                           </object>
                                           <packing>
                                             <property name="position">1</property>
