The translators are finding 'Print Shop' very hard to translate, so change the wording a little

--- a/data/gcm-calibrate.ui
+++ b/data/gcm-calibrate.ui
@@ -597,7 +597,7 @@
                                         <child>
                                           <object class="GtkLabel" id="label17">
                                             <property name="visible">True</property>
-                                            <property name="label" translatable="yes">Profile Attached Printer</property>
+                                            <property name="label" translatable="yes" comments="The user is trying to create an ICC profile of a printer that is connected to the computer">Profile locally attached printer</property>
                                           </object>
                                           <packing>
                                             <property name="position">1</property>
@@ -625,7 +625,7 @@
                                           <object class="GtkImage" id="image5">
                                             <property name="visible">True</property>
                                             <property name="pixel_size">150</property>
-                                            <property name="icon_name">document-save</property>
+                                            <property name="icon_name">folder-open</property>
                                           </object>
                                           <packing>
                                             <property name="position">0</property>
@@ -634,7 +634,7 @@
                                         <child>
                                           <object class="GtkLabel" id="label18">
                                             <property name="visible">True</property>
-                                            <property name="label" translatable="yes">Create Images For Print Shop</property>
+                                            <property name="label" translatable="yes" comments="The user wants to create images suitable to send to a photo-processing lab">Create images for printing</property>
                                           </object>
                                           <packing>
                                             <property name="position">1</property>
@@ -662,7 +662,7 @@
                                           <object class="GtkImage" id="image6">
                                             <property name="visible">True</property>
                                             <property name="pixel_size">150</property>
-                                            <property name="icon_name">emblem-photos</property>
+                                            <property name="icon_name">calibration-long</property>
                                           </object>
                                           <packing>
                                             <property name="position">0</property>
@@ -671,7 +671,7 @@
                                         <child>
                                           <object class="GtkLabel" id="label19">
                                             <property name="visible">True</property>
-                                            <property name="label" translatable="yes">Analyze Print Shop Images</property>
+                                            <property name="label" translatable="yes" comments="The user wants to analyse images that have been printed by a photo-processing lab">Generate profile from printed images</property>
                                           </object>
                                           <packing>
                                             <property name="position">1</property>
