trivial: Remove the 'Device' suffix from the device buttons

--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -61,7 +61,7 @@
                                 <property name="spacing">6</property>
                                 <child>
                                   <object class="GtkButton" id="button_device_add">
-                                    <property name="label" translatable="yes" comments="This is a button to add a virtual device">_Add Device</property>
+                                    <property name="label" translatable="yes" comments="This is a button to add a virtual device">_Add&#x2026;</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">True</property>
@@ -76,7 +76,7 @@
                                 </child>
                                 <child>
                                   <object class="GtkButton" id="button_delete">
-                                    <property name="label" translatable="yes" comments="This is a button to delete the saved or virtual device">_Delete Device</property>
+                                    <property name="label" translatable="yes" comments="This is a button to delete the saved or virtual device">Remove</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">True</property>
@@ -91,7 +91,7 @@
                                 </child>
                                 <child>
                                   <object class="GtkButton" id="button_calibrate">
-                                    <property name="label" translatable="yes" comments="This is a button to calibrate the device by creating an ICC profile file using a hardware device or a reference image">Create _Profile for Device</property>
+                                    <property name="label" translatable="yes" comments="This is a button to calibrate the device by creating an ICC profile file using a hardware device or a reference image">Create _Profile</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">True</property>
