trivial: Remove the 'Profile' suffix from the profile buttons

--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -621,7 +621,7 @@
                                 <property name="spacing">6</property>
                                 <child>
                                   <object class="GtkButton" id="button_profile_import">
-                                    <property name="label" translatable="yes">_Import Profile</property>
+                                    <property name="label" translatable="yes">_Add&#x2026;</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">True</property>
@@ -635,7 +635,7 @@
                                 </child>
                                 <child>
                                   <object class="GtkButton" id="button_profile_delete">
-                                    <property name="label" translatable="yes">_Delete Profile</property>
+                                    <property name="label" translatable="yes">Remove</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="receives_default">True</property>
