--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -1946,4 +1946,10 @@
       <action-widget response="0">button_virtual_add</action-widget>
     </action-widgets>
   </object>
+  <object class="GtkSizeGroup" id="sizegroup_lists">
+    <widgets>
+      <widget name="scrolledwindow1"/>
+      <widget name="scrolledwindow2"/>
+    </widgets>
+  </object>
 </interface>
