trivial: Add the GtkLabels in the Defaults pane to a GtkSizeGroup

--- a/data/gcm-prefs.ui
+++ b/data/gcm-prefs.ui
@@ -1421,7 +1421,7 @@
                             <child>
                               <object class="GtkHBox" id="hbox42">
                                 <property name="visible">True</property>
-                                <property name="spacing">9</property>
+                                <property name="spacing">12</property>
                                 <child>
                                   <object class="GtkHBox" id="hbox43">
                                     <property name="visible">True</property>
@@ -1438,6 +1438,7 @@
                                     </child>
                                   </object>
                                   <packing>
+                                    <property name="expand">False</property>
                                     <property name="position">0</property>
                                   </packing>
                                 </child>
@@ -1459,7 +1460,7 @@
                             <child>
                               <object class="GtkHBox" id="hbox44">
                                 <property name="visible">True</property>
-                                <property name="spacing">9</property>
+                                <property name="spacing">12</property>
                                 <child>
                                   <object class="GtkHBox" id="hbox46">
                                     <property name="visible">True</property>
@@ -1476,6 +1477,7 @@
                                     </child>
                                   </object>
                                   <packing>
+                                    <property name="expand">False</property>
                                     <property name="position">0</property>
                                   </packing>
                                 </child>
@@ -1538,7 +1540,7 @@
                             <child>
                               <object class="GtkHBox" id="hbox14">
                                 <property name="visible">True</property>
-                                <property name="spacing">9</property>
+                                <property name="spacing">12</property>
                                 <child>
                                   <object class="GtkHBox" id="hbox15">
                                     <property name="visible">True</property>
@@ -1555,6 +1557,7 @@
                                     </child>
                                   </object>
                                   <packing>
+                                    <property name="expand">False</property>
                                     <property name="position">0</property>
                                   </packing>
                                 </child>
@@ -1576,7 +1579,7 @@
                             <child>
                               <object class="GtkHBox" id="hbox16">
                                 <property name="visible">True</property>
-                                <property name="spacing">9</property>
+                                <property name="spacing">12</property>
                                 <child>
                                   <object class="GtkHBox" id="hbox17">
                                     <property name="visible">True</property>
@@ -1593,6 +1596,7 @@
                                     </child>
                                   </object>
                                   <packing>
+                                    <property name="expand">False</property>
                                     <property name="position">0</property>
                                   </packing>
                                 </child>
@@ -1950,6 +1954,14 @@
     <widgets>
       <widget name="scrolledwindow1"/>
       <widget name="scrolledwindow2"/>
+    </widgets>
+  </object>
+  <object class="GtkSizeGroup" id="sizegroup_defaults">
+    <widgets>
+      <widget name="hbox43"/>
+      <widget name="hbox46"/>
+      <widget name="hbox15"/>
+      <widget name="hbox17"/>
     </widgets>
   </object>
 </interface>
